# RestHW

./: .coverage  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  reqirements.txt  requirements.txt
config/: settings.py  urls.py
lms/: __init__.py  admin.py  models.py  pagination.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/fixtures/: course_fixture.json  lesson_fixture.json  lessons_fixture.json  payment2_fixture.json  payment_fixture.json  user_fixture.json
lms/migrations/: 0001_initial.py  0002_alter_lesson_video.py  0003_course_owner_lesson_owner.py  0004_alter_lesson_course.py  0005_alter_lesson_video_subscription.py
users/: __init__.py  admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: cmu.py  csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_link_to_pay_payment_session_id_and_more.py
